<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zeppelin</string>
    <string name="title_activity_main">Zeppelin</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_settings">Settings</string>

    <!-- main activity -->
    <string name="action_library">Library</string>
    <string name="action_settings">Settings</string>
    <string name="action_main_queue_remove">Remove</string>

    <!-- library activity -->
    <string name="action_library_scan">Scan</string>
    <string name="action_library_refresh">Refresh</string>

    <string name="action_queue_album">Queue album</string>
    <string name="action_queue_file">Queue file</string>
    <string name="action_file_edit_metadata">Edit metadata</string>

    <string name="library_progress_title">Loading ...</string>
    <string name="library_progress_message">Please wait.</string>
    <string name="unknown_artist">Unknown Artist</string>

    <!--  metadata activity -->
    <string name="metadata_filename">Filename</string>
    <string name="metadata_artist">Artist</string>
    <string name="metadata_album">Album</string>
    <string name="metadata_title">Title</string>
    <string name="metadata_year">Year</string>
    <string name="metadata_track_index">Track index</string>
    <string name="metadata_sampling_rate">Sampling rate</string>
    <string name="metadata_audio_codec">Audio codec</string>
    
    <string name="type_unknown">UNKNOWN</string>
    <string name="type_mp3">MP3</string>
    <string name="type_flac">FLAC</string>
    
    <plurals name="number_of_albums">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="number_of_songs">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <string name="title_activity_metadata">MetadataActivity</string>

</resources>
