<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- filename -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_filename"
        android:textStyle="bold"/>
	<TextView
	    android:id="@+id/metadata_filename"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<!-- artist -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_artist"
	    android:textStyle="bold"/>
	<EditText
	    android:id="@+id/metadata_artist"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<!-- album -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_album"
	    android:textStyle="bold"/>
	<EditText
	    android:id="@+id/metadata_album"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<!-- title -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_title"
	    android:textStyle="bold"/>
	<EditText
	    android:id="@+id/metadata_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<!-- year -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_year"
	    android:textStyle="bold"/>
	<EditText
	    android:id="@+id/metadata_year"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal"/>
	
	<!-- track index -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_track_index"
	    android:textStyle="bold"/>
	<EditText
	    android:id="@+id/metadata_track_index"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="numberDecimal"/>
	
	<!-- sampling rate -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_sampling_rate"
	    android:textStyle="bold"/>
	<TextView
	    android:id="@+id/metadata_sampling_rate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<!-- audio codec -->
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/metadata_audio_codec"
	    android:textStyle="bold"/>
	<TextView
	    android:id="@+id/metadata_audio_codec"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
</LinearLayout>
